# tpmp-gr10a-lab4-ai-verasy

./: CMakeLists.txt  Makefile  README.md  диаграмма классов.drawio
.github/workflows/: ci.yml
database/: init_db.sql  queries.sql
docs/diagrams/: O.md  Диаграмма вариантов использования.drawio  Диаграмма деятельности.drawio  Диаграмма компонентов.drawio  Диаграмма последовательности.drawio  Диаграмма развертывания.drawio  диаграмма классов.drawio
includes/: auctions.h  auth.h  database.h  farms.h  furs.h  utils.h
sql/: create_tables.sql  sample_data.sql
src/: auctions.c  auth.c  database.c  farms.c  furs.c  main.c  utils.c
tests/: CMakeLists.txt  test_database.cpp
tests/Catch2/: CMakeLists.txt
